What in life cannot be fixed with z-index: 999; ?

--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -67,6 +67,7 @@ body {
 	position: absolute;
 	top: 0;
 	right: 0;
+	z-index: 999;
 
 	@media screen and (max-width: $tablet) {
 		display: none;
